Interpret until duplicated values checking.

--- a/notebooks/1.2-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.2-hdr-coderefactor-notebook.ipynb
@@ -53,7 +53,7 @@
         "- Machine Learning Evaluation Metric: Accuracy, Precision, Recall, F1-score, ROC-AUC.\n",
         "\n",
         "### 1.7 Success Criteria\n",
-        "- Achieve high classification performance (e.g., ROC-AUC > 0.80).\n",
+        "- Achieve high classification performance on recall (>=80).\n",
         "- Provide interpretable insights for business decisions.\n",
         "- Demonstrate model effectiveness on unseen data."
       ]
@@ -63,9 +63,7 @@
       "metadata": {},
       "source": [
         "## Section 2. Data Understanding\n",
-        "### 2.1 General Information\n",
-        "- Dataset contains customer records with attributes related to demographics, services, contracts, billing, and churn.\n",
-        "- Target variable: Churn (Yes/No)."
+        "### 2.1 Dataset Information"
       ]
     },
     {
@@ -322,14 +320,24 @@
     },
     {
       "cell_type": "markdown",
+      "id": "d430b2f3",
+      "metadata": {},
+      "source": [
+        "The provided summary of the DataFrame indicates that it contains a total of 4,930 entries, which represent individual customers or accounts. The DataFrame is structured with 11 columns, each capturing specific attributes related to the customers' service usage and characteristics.\n",
+        "\n",
+        "Among the columns, the Dependents field identifies whether customers have dependents, while tenure reflects the duration, in months, that customers have maintained their service. Several columns, such as OnlineSecurity, OnlineBackup, DeviceProtection, and TechSupport, denote the availability of various service options, illustrating the range of features customers can choose. The InternetService column specifies the type of internet service provided, which may influence customer satisfaction and retention.\n",
+        "\n",
+        "Additionally, the Contract column indicates the nature of the customer's agreement with the service provider, and PaperlessBilling shows whether customers have opted for electronic billing. The MonthlyCharges column presents the cost incurred by each customer monthly, providing insight into the pricing structure. Finally, the Churn column indicates whether a customer has discontinued their service, which is crucial for understanding customer retention and satisfaction. In details, the column breakdowns as per below:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "bf5ecb48",
       "metadata": {},
       "source": [
-        "### 2.2 Feature Information\n",
-        "\n",
         "<table>\n",
         "    <tr>\n",
-        "        <th>Feature</th>\n",
+        "        <th>Column Name</th>\n",
         "        <th>Importance</th>\n",
         "        <th>Impact to Business</th>\n",
         "    </tr>\n",
@@ -386,7 +394,7 @@
         "    <tr>\n",
         "        <td>Churn</td>\n",
         "        <td>Critical</td>\n",
-        "        <td>Churn rate is a key performance indicator for business health and customer satisfaction.</td>\n",
+        "        <td>Churn rate is a key performance indicator for business health and customer satisfaction. This column will be used as target.</td>\n",
         "    </tr>\n",
         "</table>"
       ]
@@ -396,8 +404,7 @@
       "id": "7e73c8b3",
       "metadata": {},
       "source": [
-        "### 2.3 Missing Values Checking\n",
-        "Check for missing values and visualize them."
+        "### 2.2 Missing Values Checking"
       ]
     },
     {
@@ -448,11 +455,20 @@
     },
     {
       "cell_type": "markdown",
+      "id": "63d359e9",
+      "metadata": {},
+      "source": [
+        "The summary indicates that there are no missing values across any of the columns in the DataFrame, which consists of 4,930 entries. Each attribute, including Dependents, tenure, OnlineSecurity, OnlineBackup, InternetService, DeviceProtection, TechSupport, Contract, PaperlessBilling, MonthlyCharges, and Churn, has a complete dataset with zero missing entries. This completeness is crucial for conducting accurate analyses and drawing reliable conclusions.\n",
+        "\n",
+        "The accompanying visual representation, a missing data matrix, further emphasizes this finding. Each column is displayed without any gaps, confirming that all data points are accounted for. This absence of missing values enhances the integrity of the dataset, allowing for more robust statistical evaluations and insights into customer behavior and service usage. Overall, the DataFrame is well-prepared for further analysis, ensuring that any insights derived will be based on a comprehensive and complete dataset."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "c95e8abc",
       "metadata": {},
       "source": [
-        "### 2.4 Duplicated Values Checking\n",
-        "Check for duplicated rows."
+        "### 2.3 Duplicated Values Checking"
       ]
     },
     {
@@ -477,11 +493,24 @@
     },
     {
       "cell_type": "markdown",
+      "id": "36d33d19",
+      "metadata": {},
+      "source": [
+        "The presence of 77 duplicated rows in this dataset indicates that these rows are exact copies of others within the same data. Such duplicates can arise from data entry errors, system issues, or legitimate repeated events depending on the context. However, removing duplicates is not always the best course of action.\n",
+        "\n",
+        "One reason to retain duplicates is that they may represent valid repeated observations or transactions, which are important for accurate analysis. For example, in transactional data or repeated measurements, duplicates reflect real-world occurrences rather than errors. Removing them could distort data distributions and lead to misleading results. Additionally, duplicates can help validate data consistency and quality during data processing (Oracle Community, 2024).\n",
+        "\n",
+        "Moreover, certain analytical methods and visualizations rely on the frequency of data points, where duplicates provide meaningful information rather than noise. Understanding the origin and significance of duplicates is essential before deciding to remove them, as their removal may compromise data integrity and analytical validity (Imhoff, Galemmo, & Geiger, 2003).\n",
+        "\n",
+        "In summary, while duplicates often indicate data quality issues, they can also carry important information depending on the dataset and context. Careful assessment ensures that valuable data is preserved, supporting reliable and valid analysis."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "5ddd758a",
       "metadata": {},
       "source": [
-        "### 2.5 Dataset Restructuring for Better EDA\n",
-        "Convert object columns to categorical for memory efficiency and proper analysis."
+        "### 2.4 Dataset Restructuring for Better EDA"
       ]
     },
     {
@@ -529,8 +558,8 @@
       "id": "67c6e0ae",
       "metadata": {},
       "source": [
-        "### 2.6 Exploratory Data Analysis (EDA)\n",
-        "#### 2.6.1 Outlier Analysis"
+        "### 2.5 Exploratory Data Analysis (EDA)\n",
+        "#### 2.5.1 Outlier Analysis"
       ]
     },
     {
@@ -578,7 +607,7 @@
       "id": "de1a1608",
       "metadata": {},
       "source": [
-        "#### 2.6.2 Unique Values Analysis"
+        "#### 2.5.2 Unique Values Analysis"
       ]
     },
     {
@@ -698,7 +727,7 @@
       "id": "e153a8b1",
       "metadata": {},
       "source": [
-        "#### 2.6.3 Proportion Analysis"
+        "#### 2.5.3 Proportion Analysis"
       ]
     },
     {
@@ -733,7 +762,7 @@
       "id": "6c0c54f2",
       "metadata": {},
       "source": [
-        "#### 2.6.4 Feature Distribution Analysis (Categorical)"
+        "#### 2.5.4 Feature Distribution Analysis (Categorical)"
       ]
     },
     {
@@ -808,7 +837,7 @@
       "id": "90978186",
       "metadata": {},
       "source": [
-        "#### 2.6.5 Correlation Analysis"
+        "#### 2.5.5 Correlation Analysis"
       ]
     },
     {
@@ -847,7 +876,7 @@
       "id": "b2aeaf16",
       "metadata": {},
       "source": [
-        "#### 2.6.6 Feature Distribution Analysis (Numerical)"
+        "#### 2.5.6 Feature Distribution Analysis (Numerical)"
       ]
     },
     {
@@ -907,7 +936,7 @@
       "id": "de89bd85",
       "metadata": {},
       "source": [
-        "#### 2.6.7 Statistics Summary"
+        "#### 2.5.7 Statistics Summary"
       ]
     },
     {
@@ -3516,6 +3545,8 @@
         "\n",
         "Britto, F. (2024, September 9). *Churn in telecom: What it is and its impacts.* SYDLE. https://www.sydle.com/blog/churn-telecom-66b4c9e8b2713612fa17da85\n",
         "\n",
+        "Imhoff, C., Galemmo, N., & Geiger, J. G. (2003). *Mastering Data Warehouse Design: Relational and Dimensional Techniques.* John Wiley & Sons.\n",
+        "\n",
         "Investopedia Team. (2024, March 21). *Churn rate: What it means, examples, and calculations.* Investopedia. https://www.investopedia.com/terms/c/churnrate.asp\n",
         "\n",
         "IQ Team. (2025, February 23). *Top 17 customer churn datasets and projects (Updated for 2025).* Interview Query. https://www.interviewquery.com/p/customer-churn-datasets\n",
@@ -3526,6 +3557,8 @@
         "Luck, I. (2023, April 4). *What is customer churn? Complete meaning & guide.* CustomerGauge. https://customergauge.com/customer-churn\n",
         "\n",
         "O'Brien, K., & Downie, A. (2024, September 9). *What is customer churn?* IBM. https://www.ibm.com/think/topics/customer-churn\n",
+        "\n",
+        "Oracle Community. (2024).* OAC - Table visualization in DV duplicate rows, but LSQL is correct.* Retrieved from https://community.oracle.com/products/oracleanalytics/discussion/21184/oac-table-visualization-in-dv-duplicate-rows-but-lsql-is-correct\n",
         "\n",
         "- Scikit-learn documentation: https://scikit-learn.org/stable/\n",
         "- SHAP documentation: https://shap.readthedocs.io/en/latest/\n",
