Interpret untul Dataset Restructuring.

--- a/notebooks/1.2-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.2-hdr-coderefactor-notebook.ipynb
@@ -555,6 +555,18 @@
     },
     {
       "cell_type": "markdown",
+      "id": "29dfcd25",
+      "metadata": {},
+      "source": [
+        "The DataFrame is restructured for better Exploratory Data Analysis (EDA) because the initial data types are not relevant. This restructuring is performed to enhance the efficiency and clarity of the data, which is crucial for effective analysis. The object columns are converted to categorical data type, a process that is often necessary to ensure that the data is properly formatted for statistical and machine learning tasks (McKinney, 2017; VanderPlas, 2016).\n",
+        "\n",
+        "The conversion of object columns to categorical data type is achieved by using the astype('category') method in Pandas. This approach not only improves memory efficiency but also ensures that the data is treated appropriately during analysis. The changes are confirmed by checking the updated data types of the DataFrame using the info() method, which provides a summary of the DataFrame's structure and memory usage (McKinney, 2017; VanderPlas, 2016).\n",
+        "\n",
+        "The restructuring process is facilitated by identifying the object columns and applying the necessary conversion. This step is essential in maintaining data integrity and ensuring that the analysis is conducted on the correct data types. The use of categorical data types can also help in reducing errors that might arise from treating categorical variables as strings (Wickham & Grolemund, 2017; McKinney, 2017)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "67c6e0ae",
       "metadata": {},
       "source": [
@@ -3551,14 +3563,19 @@
         "\n",
         "IQ Team. (2025, February 23). *Top 17 customer churn datasets and projects (Updated for 2025).* Interview Query. https://www.interviewquery.com/p/customer-churn-datasets\n",
         "\n",
-        "Kumari, D., Singh, S. K., Katira, S. S., Srinivas, I. V., & Salunkhe, U. (2025). *Telecom customer churn forecasting using machine learning: A data-driven predictive framework.* \n",
-        "Metallurgical and Materials Engineering, 31(4), 922-929. https://doi.org/10.63278/1536\n",
+        "Kumari, D., Singh, S. K., Katira, S. S., Srinivas, I. V., & Salunkhe, U. (2025). *Telecom customer churn forecasting using machine learning: A data-driven predictive framework.* Metallurgical and Materials Engineering, 31(4), 922-929. https://doi.org/10.63278/1536\n",
         "\n",
         "Luck, I. (2023, April 4). *What is customer churn? Complete meaning & guide.* CustomerGauge. https://customergauge.com/customer-churn\n",
+        "\n",
+        "McKinney, W. (2017). *Python for Data Analysis: Data Wrangling with Pandas, NumPy, and IPython (2nd ed.).* O'Reilly Media.\n",
         "\n",
         "O'Brien, K., & Downie, A. (2024, September 9). *What is customer churn?* IBM. https://www.ibm.com/think/topics/customer-churn\n",
         "\n",
         "Oracle Community. (2024).* OAC - Table visualization in DV duplicate rows, but LSQL is correct.* Retrieved from https://community.oracle.com/products/oracleanalytics/discussion/21184/oac-table-visualization-in-dv-duplicate-rows-but-lsql-is-correct\n",
+        "\n",
+        "VanderPlas, J. (2016). *Python Data Science Handbook: Essential Tools for Working with Data.* O'Reilly Media.\n",
+        "\n",
+        "Wickham, H., & Grolemund, G. (2017). *R for Data Science: Import, Tidy, Transform, Visualize, and Model Data.* O'Reilly Media.\n",
         "\n",
         "- Scikit-learn documentation: https://scikit-learn.org/stable/\n",
         "- SHAP documentation: https://shap.readthedocs.io/en/latest/\n",
