--- a/notebooks/1.2-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.2-hdr-coderefactor-notebook.ipynb
@@ -2230,7 +2230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "id": "1b0a0b1a",
       "metadata": {},
       "outputs": [
@@ -2810,7 +2810,7 @@
         "    ],\n",
         "    'classifier__n_estimators': [50, 100, 150, 200, 250],\n",
         "    'classifier__learning_rate': [0.01, 0.05, 0.1, 0.5, 1.0],\n",
-        "    'classifier__algorithm': ['SAMME', 'SAMME.R']\n",
+        "    'classifier__algorithm': ['SAMME']\n",
         "}\n",
         "\n",
         "# Setup RandomizedSearchCV with recall scoring and stratified CV\n",
