Interpret until define X and y.

--- a/notebooks/1.3-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.3-hdr-coderefactor-notebook.ipynb
@@ -1256,7 +1256,14 @@
       "id": "ee8d09b9",
       "metadata": {},
       "source": [
-        "## Section 3. Data Preparation\n",
+        "## Section 3. Data Preparation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c8587057",
+      "metadata": {},
+      "source": [
         "### 3.1 Feature Engineering"
       ]
     },
@@ -1412,6 +1419,14 @@
       "source": [
         "df['TotalCharges'] = df['tenure'] * df['MonthlyCharges']\n",
         "df.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d901d31f",
+      "metadata": {},
+      "source": [
+        "A new feature named \"TotalCharges\" is created by multiplying the \"tenure\" and \"MonthlyCharges\" columns. This new variable represents the total amount charged to a customer over their entire tenure with the company. The calculation is performed to capture the cumulative revenue generated from each customer. By including this feature, additional insights into customer value and behavior can be provided. The dataset is then updated to include this newly engineered feature for further analysis and modeling."
       ]
     },
     {
@@ -1579,6 +1594,14 @@
     },
     {
       "cell_type": "markdown",
+      "id": "8034dd23",
+      "metadata": {},
+      "source": [
+        "The target variable \"Churn\" is transformed from categorical labels \"Yes\" and \"No\" into binary numerical values 1 and 0, respectively. This mapping facilitates the use of machine learning algorithms that require numerical input for classification tasks. The conversion standardizes the target variable, allowing for efficient model training and evaluation. After the transformation, the dataset is updated to reflect the binary encoding of the churn status."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "124aff8a",
       "metadata": {},
       "source": [
@@ -1587,14 +1610,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "46dcfa72",
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Define feature matrix X and target vector y\n",
+        "# Define feature (X) and target (y)\n",
         "X = df.drop(columns=['Churn'])\n",
         "y = df['Churn']"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "1bd328ad",
+      "metadata": {},
+      "source": [
+        "The feature set (X) is defined by removing the 'Churn' column from the dataset, which contains the input variables for a machine learning model. Meanwhile, the target variable (y) is set to the 'Churn' column of the same DataFrame, representing the outcome that the model aims to predict."
       ]
     },
     {
@@ -1616,6 +1647,14 @@
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    X, y, test_size=0.2, random_state=42, stratify=y\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "43ce3789",
+      "metadata": {},
+      "source": [
+        "The train-test split procedure is a common model validation technique used to simulate how a machine learning model performs on new, unseen data. Typically, the dataset is divided into a training set, used to train the model, and a testing set, used to evaluate its performance. Common practice often involves allocating around 70% to 80% of the data for training and the remaining 20% to 30% for testing, with an 80:20 split considered a good balance between training the model sufficiently and having enough data to assess its generalization. This split helps reduce overfitting and provides a reliable estimate of model performance on future data. The stratified splitting method is recommended when dealing with imbalanced datasets to preserve the proportion of classes in both subsets, further improving model evaluation reliability (Galarnyk, 2025). "
       ]
     },
     {
@@ -3453,6 +3492,8 @@
         "BlastChar. (2018). *Telco customer churn prediction* [Dataset]. Kaggle. https://www.kaggle.com/datasets/blastchar/telco-customer-churn\n",
         "\n",
         "Britto, F. (2024, September 9). Churn in telecom: What it is and its impacts. *SYDLE.* https://www.sydle.com/blog/churn-telecom-66b4c9e8b2713612fa17da85\n",
+        "\n",
+        "Galarnyk, M. (2025, February 3). *Train test split: What it means and how to use it.* Built In. https://builtin.com/data-science/train-test-split\n",
         "\n",
         "He, H., & Garcia, E. A. (2009). Learning from imbalanced data. *IEEE Transactions on Knowledge and Data Engineering, 21*(9), 1263–1284. https://doi.org/10.1109/TKDE.2008.239\n",
         "\n",
