Interpret untul data transformation setup.

--- a/notebooks/1.3-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.3-hdr-coderefactor-notebook.ipynb
@@ -1735,6 +1735,16 @@
     },
     {
       "cell_type": "markdown",
+      "id": "34ce8af0",
+      "metadata": {},
+      "source": [
+        "Several steps are taken to preprocess a DataFrame for a machine learning task, ensuring that the data is appropriately prepared for modeling. First, categorical columns are identified while excluding the target variable 'Churn' and the 'Contract' column to focus on relevant features. Numeric columns are also identified based on their data types to facilitate appropriate scaling. Additionally, binary columns, which contain exactly two unique values, are isolated, and the categorical columns are further divided into binary and non-binary categories for targeted processing.\n",
+        "\n",
+        "A specific mapping function is defined to convert binary responses from 'No' and 'Yes' to 0 and 1, ensuring that the model can interpret these values correctly. The code includes a function to create a numeric transformer pipeline using different scalers, allowing for flexibility in handling various data distributions. Furthermore, a preprocessor is constructed that combines various transformations for numeric, binary, ordinal, and categorical data. This method is employed to streamline the preprocessing workflow, ensuring that each type of data is handled effectively, which is crucial for improving model performance (Idris, 2024). By using pipelines and transformers, the code enhances maintainability and scalability, making it easier to adapt to different datasets or modeling requirements."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "6f2c36e7",
       "metadata": {},
       "source": [
@@ -3496,6 +3506,8 @@
         "Galarnyk, M. (2025, February 3). *Train test split: What it means and how to use it.* Built In. https://builtin.com/data-science/train-test-split\n",
         "\n",
         "He, H., & Garcia, E. A. (2009). Learning from imbalanced data. *IEEE Transactions on Knowledge and Data Engineering, 21*(9), 1263–1284. https://doi.org/10.1109/TKDE.2008.239\n",
+        "\n",
+        "Idris, N. L. (2024, July 31). *Streamlining data preprocessing and cleaning in a machine learning pipeline.* Medium. https://medium.com/@nafisaidris413/streamlining-data-preprocessing-and-cleaning-in-a-machine-learning-pipeline-a6e602de2e57\n",
         "\n",
         "Imhoff, C., Galemmo, N., & Geiger, J. G. (2003). *Mastering data warehouse design: Relational and dimensional techniques*. John Wiley & Sons.\n",
         "\n",
