--- a/notebooks/1.3-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.3-hdr-coderefactor-notebook.ipynb
@@ -1754,7 +1754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "3d1955d6",
       "metadata": {},
       "outputs": [
@@ -2703,7 +2703,7 @@
         "# Update the preprocessor variable with the best scaler\n",
         "preprocessor = create_preprocessor(best_scaler_instance)\n",
         "\n",
-        "# Now you can use the updated preprocessor in your final model pipeline\n",
+        "# Use the updated preprocessor in final model pipeline\n",
         "best_base_pipeline = Pipeline([\n",
         "    ('preprocessor', preprocessor),\n",
         "    ('classifier', models[best_model])  # Use the best model from the results\n",
