Interpret until base model bench

--- a/notebooks/1.3-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.3-hdr-coderefactor-notebook.ipynb
@@ -2715,6 +2715,23 @@
     },
     {
       "cell_type": "markdown",
+      "id": "db831f41",
+      "metadata": {},
+      "source": [
+        "Classification algorithms are fundamental components of machine learning, utilized to categorize data into predefined classes or labels. These algorithms operate on the principle of supervised learning, where a model is trained using a labeled dataset. The primary objective is to learn the relationships between input features and the corresponding output labels, enabling the model to predict the class of new, unseen data. Various types of classification algorithms exist, each with distinct methodologies and applications. Common types include logistic regression, decision trees, support vector machines, k-nearest neighbors, and Naïve Bayes (Belcic, 2024; GeeksforGeeks, 2024). Each algorithm possesses unique strengths and weaknesses, making them suitable for different classification tasks and datasets.\n",
+        "\n",
+        "The foundation of classification algorithms lies in their ability to model the relationship between input features and output labels. For instance, logistic regression employs a linear approach to predict binary outcomes by estimating probabilities. Decision trees utilize a hierarchical structure, making decisions based on feature values to classify data points (GeeksforGeeks, 2024). Support vector machines aim to find the optimal hyperplane that separates different classes in high-dimensional space. K-nearest neighbors, on the other hand, classify instances based on the majority class of their closest neighbors in the feature space. Each algorithm's effectiveness is influenced by the nature of the data, including its dimensionality, distribution, and the presence of noise (Belcic, 2024). Understanding these foundational principles is crucial for selecting the most appropriate classification algorithm for a given problem.\n",
+        "\n",
+        "On the other hand, ensemble learning represents a powerful technique in machine learning that combines multiple models to enhance predictive performance. The underlying principle of ensemble methods is that a group of diverse models can collectively yield better results than any single model (Murel & Kavlakoglu, 2024). Two primary types of ensemble methods are bagging and boosting. Bagging, or bootstrap aggregating, involves training multiple models independently on different subsets of the data and averaging their predictions. This approach reduces variance and helps prevent overfitting. Random forests, which are an extension of decision trees, exemplify bagging techniques (GeeksforGeeks, 2025). Conversely, boosting trains models sequentially, where each subsequent model focuses on correcting the errors made by its predecessor. This method reduces bias and enhances overall accuracy. Popular boosting algorithms include AdaBoost and Gradient Boosting. Ensemble methods have proven particularly effective in improving model robustness and generalization, especially in complex datasets (GeeksforGeeks, 2025).\n",
+        "\n",
+        "Limitations of Naïve Bayes Classifier\n",
+        "Despite its popularity and simplicity, the Naïve Bayes classifier has limitations that impact its applicability in certain scenarios. One significant drawback is its reliance on the assumption of feature independence, particularly in the Gaussian Naïve Bayes variant. This assumption may not hold true for many real-world datasets, leading to suboptimal performance (IBM, n.d.). Additionally, the Bernoulli and Multinomial variants of Naïve Bayes are sensitive to the scaling of input features, which can adversely affect classification accuracy. These models assume that features follow specific distributions, which may not align with the actual data characteristics (GeeksforGeeks, 2024). As a result, the Naïve Bayes classifier may not always be the best choice for classification tasks, especially when the underlying assumptions about feature distribution and scaling are violated.\n",
+        "\n",
+        "After the evaluation, the best-performing model based on recall is identified, with the AdaBoost model emerging as the top choice when paired with a Robust Scaler. This selection process highlights the importance of both model choice and preprocessing techniques in achieving optimal performance. Finally, a pipeline is constructed using the identified best model and scaler, which can be utilized for making predictions on new data. The overall results emphasize the effectiveness of the stacking approach in enhancing model performance through the combination of multiple classifiers."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "390af2c8",
       "metadata": {},
       "source": [
@@ -3497,6 +3514,8 @@
       "source": [
         "## References\n",
         "\n",
+        "Belcic, I. (2024, October 15). *What is classification in machine learning?* Retrieved from https://www.ibm.com/think/topics/classification-machine-learning\n",
+        "\n",
         "Bhatnagar, A., & Srivastava, S. (2025). Customer churn analysis in telecom. *Computing Online.* https://computingonline.net/computing/article/view/3873\n",
         "\n",
         "BlastChar. (2018). *Telco customer churn prediction* [Dataset]. Kaggle. https://www.kaggle.com/datasets/blastchar/telco-customer-churn\n",
@@ -3505,7 +3524,13 @@
         "\n",
         "Galarnyk, M. (2025, February 3). *Train test split: What it means and how to use it.* Built In. https://builtin.com/data-science/train-test-split\n",
         "\n",
+        "GeeksforGeeks. (2024, September 4). *Top 6 machine learning classification algorithms.* Retrieved from https://www.geeksforgeeks.org/top-6-machine-learning-algorithms-for-classification/\n",
+        "\n",
+        "GeeksforGeeks. (2025, January 23). *Ensemble learning.* Retrieved from https://www.geeksforgeeks.org/a-comprehensive-guide-to-ensemble-learning/\n",
+        "\n",
         "He, H., & Garcia, E. A. (2009). Learning from imbalanced data. *IEEE Transactions on Knowledge and Data Engineering, 21*(9), 1263–1284. https://doi.org/10.1109/TKDE.2008.239\n",
+        "\n",
+        "IBM. (n.d.). *What are Naïve Bayes classifiers?* Retrieved from https://www.ibm.com/think/topics/naive-bayes\n",
         "\n",
         "Idris, N. L. (2024, July 31). *Streamlining data preprocessing and cleaning in a machine learning pipeline.* Medium. https://medium.com/@nafisaidris413/streamlining-data-preprocessing-and-cleaning-in-a-machine-learning-pipeline-a6e602de2e57\n",
         "\n",
@@ -3526,6 +3551,8 @@
         "McKinney, W. (2017). *Python for data analysis: Data wrangling with pandas, NumPy, and IPython* (2nd ed.). O'Reilly Media.\n",
         "\n",
         "Mukaka, M. M. (2012). A guide to appropriate use of correlation coefficient in medical research. *Malawi Medical Journal*, 24(3), 69–71. https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3576830/\n",
+        "\n",
+        "Murel, J., & Kavlakoglu, E. (2024, March 18). *What is ensemble learning?* Retrieved from https://www.ibm.com/think/topics/ensemble-learning\n",
         "\n",
         "Schober, P., Boer, C., & Schwarte, L. A. (2018). Correlation coefficients: Appropriate use and interpretation. *Anesthesia & Analgesia*, 126(5), 1763–1768. https://doi.org/10.1213/ANE.0000000000002864\n",
         "\n",
