--- a/notebooks/1.3-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.3-hdr-coderefactor-notebook.ipynb
@@ -1735,14 +1735,7 @@
       "id": "6f2c36e7",
       "metadata": {},
       "source": [
-        "## Section 4. Modeling\n",
-        "Classification algorithms are fundamental components of machine learning, utilized to categorize data into predefined classes or labels. These algorithms operate on the principle of supervised learning, where a model is trained using a labeled dataset. The primary objective is to learn the relationships between input features and the corresponding output labels, enabling the model to predict the class of new, unseen data. Various types of classification algorithms exist, each with distinct methodologies and applications. Common types include logistic regression, decision trees, support vector machines, k-nearest neighbors, and Naïve Bayes (Belcic, 2024; GeeksforGeeks, 2024). Each algorithm possesses unique strengths and weaknesses, making them suitable for different classification tasks and datasets.\n",
-        "\n",
-        "The foundation of classification algorithms lies in their ability to model the relationship between input features and output labels. For instance, logistic regression employs a linear approach to predict binary outcomes by estimating probabilities. Decision trees utilize a hierarchical structure, making decisions based on feature values to classify data points (GeeksforGeeks, 2024). Support vector machines aim to find the optimal hyperplane that separates different classes in high-dimensional space. K-nearest neighbors, on the other hand, classify instances based on the majority class of their closest neighbors in the feature space. Each algorithm's effectiveness is influenced by the nature of the data, including its dimensionality, distribution, and the presence of noise (Belcic, 2024). Understanding these foundational principles is crucial for selecting the most appropriate classification algorithm for a given problem.\n",
-        "\n",
-        "On the other hand, ensemble learning represents a powerful technique in machine learning that combines multiple models to enhance predictive performance. The underlying principle of ensemble methods is that a group of diverse models can collectively yield better results than any single model (Murel & Kavlakoglu, 2024). Two primary types of ensemble methods are bagging and boosting. Bagging, or bootstrap aggregating, involves training multiple models independently on different subsets of the data and averaging their predictions. This approach reduces variance and helps prevent overfitting. Random forests, which are an extension of decision trees, exemplify bagging techniques (GeeksforGeeks, 2025). Conversely, boosting trains models sequentially, where each subsequent model focuses on correcting the errors made by its predecessor. This method reduces bias and enhances overall accuracy. Popular boosting algorithms include AdaBoost and Gradient Boosting. Ensemble methods have proven particularly effective in improving model robustness and generalization, especially in complex datasets (GeeksforGeeks, 2025).\n",
-        "\n",
-        "Despite its popularity and simplicity, the Naïve Bayes classifier has limitations that impact its applicability in certain scenarios. One significant drawback is its reliance on the assumption of feature independence, particularly in the Gaussian Naïve Bayes variant. This assumption may not hold true for many real-world datasets, leading to suboptimal performance (IBM, n.d.). Additionally, the Bernoulli and Multinomial variants of Naïve Bayes are sensitive to the scaling of input features, which can adversely affect classification accuracy. These models assume that features follow specific distributions, which may not align with the actual data characteristics (GeeksforGeeks, 2024). As a result, the Naïve Bayes classifier may not always be the best choice for classification tasks, especially when the underlying assumptions about feature distribution and scaling are violated."
+        "## Section 4. Modeling"
       ]
     },
     {
@@ -2716,9 +2709,26 @@
     },
     {
       "cell_type": "markdown",
+      "id": "20cc6a59",
+      "metadata": {},
+      "source": [
+        "#### 4.1.1 Choosing the classification algorithm\n",
+        "Classification algorithms are fundamental components of machine learning, utilized to categorize data into predefined classes or labels. These algorithms operate on the principle of supervised learning, where a model is trained using a labeled dataset. The primary objective is to learn the relationships between input features and the corresponding output labels, enabling the model to predict the class of new, unseen data. Various types of classification algorithms exist, each with distinct methodologies and applications. Common types include logistic regression, decision trees, support vector machines, k-nearest neighbors, and Naïve Bayes (Belcic, 2024; GeeksforGeeks, 2024). Each algorithm possesses unique strengths and weaknesses, making them suitable for different classification tasks and datasets.\n",
+        "\n",
+        "The foundation of classification algorithms lies in their ability to model the relationship between input features and output labels. For instance, logistic regression employs a linear approach to predict binary outcomes by estimating probabilities. Decision trees utilize a hierarchical structure, making decisions based on feature values to classify data points (GeeksforGeeks, 2024). Support vector machines aim to find the optimal hyperplane that separates different classes in high-dimensional space. K-nearest neighbors, on the other hand, classify instances based on the majority class of their closest neighbors in the feature space. Each algorithm's effectiveness is influenced by the nature of the data, including its dimensionality, distribution, and the presence of noise (Belcic, 2024). Understanding these foundational principles is crucial for selecting the most appropriate classification algorithm for a given problem.\n",
+        "\n",
+        "On the other hand, ensemble learning represents a powerful technique in machine learning that combines multiple models to enhance predictive performance. The underlying principle of ensemble methods is that a group of diverse models can collectively yield better results than any single model (Murel & Kavlakoglu, 2024). Two primary types of ensemble methods are bagging and boosting. Bagging, or bootstrap aggregating, involves training multiple models independently on different subsets of the data and averaging their predictions. This approach reduces variance and helps prevent overfitting. Random forests, which are an extension of decision trees, exemplify bagging techniques (GeeksforGeeks, 2025). Conversely, boosting trains models sequentially, where each subsequent model focuses on correcting the errors made by its predecessor. This method reduces bias and enhances overall accuracy. Popular boosting algorithms include AdaBoost and Gradient Boosting. Ensemble methods have proven particularly effective in improving model robustness and generalization, especially in complex datasets (GeeksforGeeks, 2025).\n",
+        "\n",
+        "Despite its popularity and simplicity, the Naïve Bayes classifier has limitations that impact its applicability in certain scenarios. One significant drawback is its reliance on the assumption of feature independence, particularly in the Gaussian Naïve Bayes variant. This assumption may not hold true for many real-world datasets, leading to suboptimal performance (IBM, n.d.). Additionally, the Bernoulli and Multinomial variants of Naïve Bayes are sensitive to the scaling of input features, which can adversely affect classification accuracy. These models assume that features follow specific distributions, which may not align with the actual data characteristics (GeeksforGeeks, 2024). As a result, the Naïve Bayes classifier may not always be the best choice for classification tasks, especially when the underlying assumptions about feature distribution and scaling are violated."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "db831f41",
       "metadata": {},
       "source": [
+        "#### 4.1.2 Best Benchmark Model Explanation\n",
+        "\n",
         "The provided code outlines a comprehensive machine learning pipeline that evaluates various classifiers to determine the best model and preprocessing strategy for a dataset. The pipeline includes a diverse set of base models, such as Logistic Regression, Random Forest Classifier, Support Vector Classifier (SVC), and XGBoost Classifier, which are used in a stacking classifier. The stacking classifier combines the predictions of these base models using a logistic regression model as the final estimator. This ensemble approach aims to enhance predictive performance by leveraging the strengths of multiple models.\n",
         "\n",
         "To evaluate the models, the pipeline employs recall as the primary scoring metric, which measures the ability of the classifier to accurately identify positive samples. Utilizing a Stratified K-Fold cross-validation strategy enhances model evaluation by ensuring that each fold accurately reflects the overall class distribution of the dataset, thereby providing more reliable and unbiased estimates of model performance, particularly in classification tasks with imbalanced classes (Mahesh et al., 2023). The results of the cross-validation are stored in a list, which is then converted into a DataFrame for easier analysis. The scores are sorted by mean score and standard deviation to identify the best-performing models and scalers.\n",
@@ -3345,6 +3355,62 @@
     },
     {
       "cell_type": "markdown",
+      "id": "48342f90",
+      "metadata": {},
+      "source": [
+        "#### 4.2.1 What is AdaBoost and How It Works ?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "0f45ccd0",
+      "metadata": {},
+      "source": [
+        "Lorem ipsum"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "050c072e",
+      "metadata": {},
+      "source": [
+        "#### 4.2.2 Parameters Those Can Be Tuned in AdaBoost"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f7a09e4b",
+      "metadata": {},
+      "source": [
+        "Lorem ipsum"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f47424ef",
+      "metadata": {},
+      "source": [
+        "#### 4.2.3 Choosing The Oversampling Techniques"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "e665986a",
+      "metadata": {},
+      "source": [
+        "Lorem ipsum"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "811936df",
+      "metadata": {},
+      "source": [
+        "#### 4.2.4 Best Tuning Parameter Explanation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "46883771",
       "metadata": {},
       "source": [
@@ -3461,7 +3527,7 @@
       "id": "a94d82a3",
       "metadata": {},
       "source": [
-        "### 4.5 Threshold Tuning Using Precision-Recall Curve"
+        "### 4.5 Threshold Tuning Using Precision-Recall Curve (Go or No Go ?)"
       ]
     },
     {
