--- a/notebooks/1.3-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.3-hdr-coderefactor-notebook.ipynb
@@ -2712,7 +2712,7 @@
       "id": "20cc6a59",
       "metadata": {},
       "source": [
-        "#### 4.1.1 Choosing the classification algorithm\n",
+        "#### 4.1.1 Choosing The Classification Models\n",
         "Classification algorithms are fundamental components of machine learning, utilized to categorize data into predefined classes or labels. These algorithms operate on the principle of supervised learning, where a model is trained using a labeled dataset. The primary objective is to learn the relationships between input features and the corresponding output labels, enabling the model to predict the class of new, unseen data. Various types of classification algorithms exist, each with distinct methodologies and applications. Common types include logistic regression, decision trees, support vector machines, k-nearest neighbors, and Naïve Bayes (Belcic, 2024; GeeksforGeeks, 2024). Each algorithm possesses unique strengths and weaknesses, making them suitable for different classification tasks and datasets.\n",
         "\n",
         "The foundation of classification algorithms lies in their ability to model the relationship between input features and output labels. For instance, logistic regression employs a linear approach to predict binary outcomes by estimating probabilities. Decision trees utilize a hierarchical structure, making decisions based on feature values to classify data points (GeeksforGeeks, 2024). Support vector machines aim to find the optimal hyperplane that separates different classes in high-dimensional space. K-nearest neighbors, on the other hand, classify instances based on the majority class of their closest neighbors in the feature space. Each algorithm's effectiveness is influenced by the nature of the data, including its dimensionality, distribution, and the presence of noise (Belcic, 2024). Understanding these foundational principles is crucial for selecting the most appropriate classification algorithm for a given problem.\n",
@@ -2727,7 +2727,7 @@
       "id": "db831f41",
       "metadata": {},
       "source": [
-        "#### 4.1.2 Best Benchmark Model Explanation\n",
+        "#### 4.1.2 Picking The Best Benchmarking Models\n",
         "\n",
         "The provided code outlines a comprehensive machine learning pipeline that evaluates various classifiers to determine the best model and preprocessing strategy for a dataset. The pipeline includes a diverse set of base models, such as Logistic Regression, Random Forest Classifier, Support Vector Classifier (SVC), and XGBoost Classifier, which are used in a stacking classifier. The stacking classifier combines the predictions of these base models using a logistic regression model as the final estimator. This ensemble approach aims to enhance predictive performance by leveraging the strengths of multiple models.\n",
         "\n",
@@ -3406,7 +3406,7 @@
       "id": "811936df",
       "metadata": {},
       "source": [
-        "#### 4.2.4 Best Tuning Parameter Explanation"
+        "#### 4.2.4 Picking The Best Tuning Parameters"
       ]
     },
     {
