Interpret until joblib load.

--- a/notebooks/1.3-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.3-hdr-coderefactor-notebook.ipynb
@@ -3875,6 +3875,16 @@
     },
     {
       "cell_type": "markdown",
+      "id": "156397ea",
+      "metadata": {},
+      "source": [
+        "Joblib is used to save and load Python objects easily and quickly. It is designed to handle big data like large arrays and machine learning models. The library is made to work well with Python programs and helps store information on the computer’s disk. It is often used to keep models safe after they are trained so they can be used later without retraining. Joblib also supports running tasks in parallel to make programs faster (Joblib, 2025).\n",
+        "\n",
+        "The process of saving a trained model is demonstrated by defining a relative file path where the model will be stored. The necessary directory is created if it does not already exist, ensuring that the save operation can proceed without errors. The model, specifically the best tuned pipeline, is then saved to the specified location using the joblib library. A confirmation message is printed to inform the user that the model has been successfully saved"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "cf937dfd",
       "metadata": {},
       "source": [
@@ -3960,6 +3970,16 @@
         "\n",
         "print(f\"Scenario 2 - Predicted churn class: {churn_pred_no_churn} (0 = No Churn)\")\n",
         "print(f\"Scenario 2 - Predicted churn probability: {churn_proba_no_churn:.4f}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "1182f4cc",
+      "metadata": {},
+      "source": [
+        "The code loads a pre-trained churn prediction model from a specified file path using joblib. A helper function is defined to convert input data dictionaries into pandas DataFrames and to ensure that object-type columns are converted to categorical types, matching the training data format. Two different customer scenarios are created with relevant features, and the helper function is applied to prepare these datasets for prediction. The loaded model is then used to predict both the churn class and the associated probability for each scenario.\n",
+        "\n",
+        "The results indicate that the model predicts a high likelihood of churn for the first customer, with a predicted class of 1 and a probability of approximately 0.78. For the second customer, the model predicts a low likelihood of churn, with a predicted class of 0 and a probability of about 0.13. These predictions suggest that the model can effectively distinguish between customers who are likely to leave and those who are likely to stay based on the input features."
       ]
     },
     {
